Fix toggle color when light and dark being selected; Implement dark mode for the website

--- a/src/style.css
+++ b/src/style.css
@@ -14,27 +14,27 @@
 
 @keyframes wave-animation {
   0% {
-    transform: rotate(0deg); /* Initial position */
+    transform: rotate(0deg);
   }
   25% {
-    transform: rotate(10deg); /* Slight tilt to the right */
+    transform: rotate(10deg);
   }
   50% {
-    transform: rotate(0deg); /* Back to the original position */
+    transform: rotate(0deg);
   }
   75% {
-    transform: rotate(-10deg); /* Slight tilt to the left */
+    transform: rotate(-10deg);
   }
   100% {
-    transform: rotate(0deg); /* Back to the original position */
+    transform: rotate(0deg);
   }
 }
 
 .name {
-  color: #9f54bc;
+  color: #b078c7;
 }
 
 .type-writing {
   padding-top: 50px;
-  color: #9f54bc;
+  color: #b078c7;
 }
